syntax = "proto3";

package api;

service WithdrawProxy {
    rpc LnurlWithdraw (stream LnurlWithdrawRequest) returns (stream LnurlWithdrawResponse);
}


message LnurlWithdrawRequest {
    oneof event {
        OpenWithdraw open = 1;
        PayResponse pay = 2;
    }
}

message LnurlWithdrawResponse {
    oneof event {
        LnurlString bech_string = 1;
        Invoice invoice = 2;
    }
}

message OpenWithdraw{
    string withdraw_id = 1;
    int64 min_amount = 2;
    int64 max_amount = 3;
    string description = 4;
}

message PayResponse{
    string status = 1;
    string reason = 2;
}
message LnurlString {
    string bech_string = 1;
}

message Invoice {
    string Invoice = 1;
}